--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
             "email": "dthomas@codenco.fr"
         }
     ],
+    "require": {
+        "barryvdh/laravel-snappy": "^1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "pestphp/pest": "^1.22",
@@ -47,9 +50,5 @@
         "post-autoload-dump": [
             "@php vendor/bin/testbench package:discover --ansi"
         ]
-    },
-    "require": {
-        "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "h4cc/wkhtmltoimage-amd64": "0.12.x"
     }
 }
