--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,57 @@
 {
-    "name": "codenco-dev/print-factory",
-    "description": "make printables easy",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "CodencoDev\\PrintFactory\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "CodencoDev\\PrintFactory\\Tests\\": "tests/"
-        }
-    },
-    "authors": [
-        {
-            "name": "frederick tyteca",
-            "email": "frederick@tyteca.net"
-        },
-        {
-            "name": "Dominique Thomas",
-            "email": "dthomas@codenco.fr"
-        }
-    ],
-    "require": {
-        "barryvdh/laravel-snappy": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "pestphp/pest": "^1.22",
-        "orchestra/testbench": "^7.13"
-    },
-    "config": {
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "CodencoDev\\PrintFactory\\PrintFactoryServiceProvider"
-            ],
-            "aliases": {
-                "PrintFactory": "CodencoDev\\PrintFactory\\Facades\\PrintFactory"
-            }
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "@php vendor/bin/testbench package:discover --ansi"
-        ]
+  "name": "codenco-dev/print-factory",
+  "description": "make printables easy",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "CodencoDev\\PrintFactory\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "CodencoDev\\PrintFactory\\Tests\\": "tests/"
+    }
+  },
+  "authors": [
+    {
+      "name": "frederick tyteca",
+      "email": "frederick@tyteca.net"
+    },
+    {
+      "name": "Dominique Thomas",
+      "email": "dthomas@codenco.fr"
+    }
+  ],
+  "require": {
+    "barryvdh/laravel-snappy": "^1.0"
+  },
+  "require-dev": {
+    "php": "^8.1",
+    "ext-sqlite3": "^3.0",
+    "laravel/pint": "^1.2",
+    "orchestra/testbench": "^7.13",
+    "phpunit/phpunit": "^9.5",
+    "pestphp/pest": "^1.22"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "CodencoDev\\PrintFactory\\PrintFactoryServiceProvider"
+      ],
+      "aliases": {
+        "PrintFactory": "CodencoDev\\PrintFactory\\Facades\\PrintFactory"
+      }
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "@php vendor/bin/testbench package:discover --ansi"
+    ]
+  }
 }
